--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "react-spotify-embed": "^1.0.4"
   },
   "scripts": {
-    "start": "npm run build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "postinstall": "npm run build"
   },
   "eslintConfig": {
     "extends": [
